# Brainfrak

./: BrainfuckJIT.vcxproj  CMakeLists.txt  README.md
src/: Compiler.cpp  Compiler.h  main.cpp
tests/: bfFibonacci.txt
